--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "devDependencies": {
     "@types/mocha": "^5.2.5",
+    "@types/nock": "^9.3.0",
     "@types/node": "^10.12.18",
     "@types/should": "^13.0.0",
     "mocha": "^5.2.0",
+    "nock": "^10.0.6",
     "should": "^13.2.0",
     "typescript": "^3.2.2"
   }
